[TagsFileItemAction] Fix bad truncation of tag name

Summary:
Instead of reconstructing the tag name from the QAction text, just
capture the tag name. The action is not required in the capture, as the
`checked` state is emitted as a signal parameter.

BUG: 405777

Test Plan: Add tag via context menu

Reviewers: #baloo, #dolphin, nicolasfella, ngraham, elvisangelaccio

Reviewed By: nicolasfella

Subscribers: lbeltrame

Tags: #baloo

Differential Revision: https://phabricator.kde.org/D20855